--- a/src/webparts/abmTipoDocumentos/components/AbmTipoDocumentos.module.scss
+++ b/src/webparts/abmTipoDocumentos/components/AbmTipoDocumentos.module.scss
@@ -1,4 +1,9 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
+:global {
+  #workbenchPageContent, .CanvasComponent.LCS .CanvasZone {
+    max-width: 100% !important;
+  }
+}
 :root{
   --grisFondo: #dfddd8;
   --azulNacion:#03787c;
